# qa-auto-engineer-python-project-241

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: python-ci.yml
gendiff/: __init__.py  gendiff.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: __init__.py  core.py  gendiff.py  parsers.py
hexlet_code.egg-info/: PKG-INFO
tests/: test_gendiff.py
tests/test_data/: expected_flat_json.json
