[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[project]
name = "hexlet-code"
version = "0.1.0"
description = "Compares two configuration files and shows the difference"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pyyaml"]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"
